--- a/src/components/compareProduct/compareProduct.scss
+++ b/src/components/compareProduct/compareProduct.scss
@@ -79,8 +79,8 @@
   margin-top: 1rem;
 
   img {
-    width: 47%;
-    margin: 1.5%;
+    width: 100%;
+    height: 6rem;
     @include borderRadius(10);
   }
 
