--- a/src/modules/ceremonyDetail/CeremonyDetail.scss
+++ b/src/modules/ceremonyDetail/CeremonyDetail.scss
@@ -63,22 +63,19 @@
   justify-content: flex-end;
   align-items: center;
   padding: 0 calc(7.5% + 15px) 2rem;
-
-  > h1 {
-    font-family: $frank-medium;
-    letter-spacing: 1px;
-    font-size: 25px !important;
-    @include tablet {
-      font-size: 4.285rem;
-    }
+  @include mobile {
+    padding: 0 1rem;
   }
 
-  > p {
-    font-size: 25px;
+  > h1, p {
+    font-family: $frank-medium;
+    line-height: 1.17;
+    color: $white;
     text-align: center;
-    @include mobile {
-      font-size: 20px;
-      line-height: normal;
+    font-size: 25px;
+    @include tablet {
+      font-size: 4.285rem;
+
     }
   }
 }
