--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -57,7 +57,7 @@ h2 {
   @include fontSize(58);
   color: $secondary-color;
   @include mobile {
-    font-size: 20px !important;
+    font-size: 20px;
   }
 }
 
