--- a/src/modules/packages/Gold/goldPackage.scss
+++ b/src/modules/packages/Gold/goldPackage.scss
@@ -52,6 +52,7 @@
     @include mobile {
       max-width: 59%;
       text-align: center;
+      font-size: 20px;
     }
   }
 }
@@ -74,6 +75,7 @@
     margin-top: 2rem;
     @include mobile {
       max-width: 52%;
+      font-size: 20px;
     }
   }
 }
