--- a/src/modules/packages/Gold/goldPackage.scss
+++ b/src/modules/packages/Gold/goldPackage.scss
@@ -103,6 +103,7 @@
     flex-direction: column;
     align-items: center;
     margin: 0 0 20vw;
+    height: 21rem;
   }
 
   &.large {
@@ -111,6 +112,7 @@
     align-items: center;
     @include mobile {
       margin-top: 20vw;
+      height: 26rem;
     }
 
     .packageItemContent {
