--- a/src/modules/wishlist/wishlist.scss
+++ b/src/modules/wishlist/wishlist.scss
@@ -7,6 +7,14 @@
   text-align: center;
 }
 
+.margin {
+  margin-top: 14rem;
+
+  @include mobile {
+    margin-top: 1rem;
+  }
+}
+
 .listTitle {
   color: $black;
   @include fontSize(24);
@@ -14,6 +22,21 @@
   background: url('/images/filter-dropdown.png') right no-repeat;
   padding-right: 2.5rem;
   width: max-content;
+
+  @include mobile {
+    display: none;
+  }
+}
+
+.listTitleMobile {
+  margin: 0 auto;
+  width: max-content;
+  margin-bottom: 2rem;
+  display: none;
+
+  @include mobile {
+    display: block;
+  }
 }
 
 .vendorList {
