--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -60,10 +60,7 @@
 .modal-dialog {
   @include mobile {
     margin: 0 auto;
-    max-width: 80% !important;
-  }
-  @include desktop {
-    // max-width: 60% !important;
+    max-width: 80%;
   }
 }
 
