--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -221,3 +221,9 @@ textarea {
     }
   }
 }
+
+// input disabled styles
+
+.form-control:disabled, .form-control[readonly] {
+  background-color: white !important;
+}
