--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -76,6 +76,7 @@
   font-size: 1rem !important;
   font-family: $roboto-regular !important;
   text-decoration: none !important;
+  padding: 0.5rem 0rem !important;
 }
 
 .phone {
