--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   @include padding(80,90,30);
-  background: url('/images/planner-bg.png') no-repeat;
+  background: url('#{$image-base-url}/planner-bg.png') no-repeat;
   background-size: contain;
   border: 2px solid $medium-pink;
   @include mobile {
