--- a/src/modules/products/products.scss
+++ b/src/modules/products/products.scss
@@ -123,7 +123,7 @@
       @include fontSize(16);
       height: auto;
       padding: 0 2rem 0 1rem;
-      background: url('/images/filter-dropdown.png') right no-repeat;
+      background: url('#{$image-base-url}/filter-dropdown.png') right no-repeat;
       -webkit-appearance: none;
 
       &:focus {
@@ -193,7 +193,7 @@
   letter-spacing: .5px;
 
   background-color: inherit;
-  background: url('/images/filter-dropdown.png') right no-repeat;
+  background: url('#{$image-base-url}/filter-dropdown.png') right no-repeat;
   -webkit-appearance: none;
 
   &:focus {
@@ -268,7 +268,7 @@
     color: $warm-grey-eight;
     letter-spacing: .48px;
     font-family: $roboto-regular;
-    background: url('/images/filter-dropdown.png') right no-repeat;
+    background: url('#{$image-base-url}/filter-dropdown.png') right no-repeat;
     padding-right: 2rem;
 
     @include mobile {
@@ -336,7 +336,7 @@
     color: $black-twelve;
     letter-spacing: .48px;
     font-family: $roboto-regular;
-    background: url('/images/filter-dropdown.png') right no-repeat;
+    background: url('#{$image-base-url}/filter-dropdown.png') right no-repeat;
     padding-right: 2rem;
   }
 
