--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,7 @@
 /* Custom styles goes here */
 
 .navbar-toggler {
-    background: url('/images/nav-icon.svg') center center no-repeat;
+    background: url('#{$image-base-url}/nav-icon.svg') center center no-repeat;
     z-index: 3;
     top: -3.8rem;
     right: 1rem
