--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -577,6 +577,12 @@ button {
   }
 }
 
+.navbar-toggler {
+  background: url('#{$image-base-url}/nav-icon.svg') center center no-repeat;
+  z-index: 3;
+  top: -3.8rem;
+  right: 1rem
+}
 input[id="contactDate"] {
   width: 100%;
   -webkit-appearance: none;
