--- a/src/modules/wishlist/wishlist.scss
+++ b/src/modules/wishlist/wishlist.scss
@@ -59,7 +59,7 @@
     padding-bottom: 2rem;
     font-family: $frank-regular;
     color: $black;
-    background: url('#{$image-base-url}/dropicon.svg') no-repeat 90% 47%;
+    background: url(/images/dropicon.svg) no-repeat 90% 47%;
 
     &.active {
       background: none;
