Revert "Revert "cdn changes (pull request #279)" (pull request #296)"
This reverts pull request #296.

> This reverts pull request #279.
> 
> > cdn changes

--- a/src/modules/detailPage/detailPageComponent.scss
+++ b/src/modules/detailPage/detailPageComponent.scss
@@ -234,7 +234,7 @@
         top: 2px;
         @include width(25);
         @include height(25);
-        background-image: url('/images/available.svg');
+        background-image: url('#{$image-base-url}/available.svg');
         background-size: contain;
         background-repeat: no-repeat;
 
@@ -242,7 +242,7 @@
 
       &.policy {
         &:before {
-          background-image: url('/images/policy.svg');
+          background-image: url('#{$image-base-url}/policy.svg');
           background-size: contain;
         }
       }
@@ -278,7 +278,7 @@
         top: 0;
         @include width(25);
         @include height(25);
-        background: url('/images/dining.svg');
+        background: url('#{$image-base-url}/dining.svg');
         background-size: contain;
         background-repeat: no-repeat;
       }
