Added close buttons to login/signup, contact popups

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -329,3 +329,19 @@
     }
   }
 }
+
+.closeBtnSmall {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  cursor: pointer;
+  display: none;
+
+  @include mobile {
+    display: block;
+  }
+
+  img {
+    @include width(28.3);
+  }
+}
