--- a/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
+++ b/src/components/TalkToWeddingPlanner/talkToWeddingPlanner.scss
@@ -119,3 +119,19 @@
     @include height(40);
   }
 }
+
+.closeBtnSmall {
+  position: absolute;
+  top: 0;
+  right: 5px;
+  cursor: pointer;
+  display: none;
+
+  @include mobile {
+    display: block;
+  }
+
+  img {
+    @include width(28.3);
+  }
+}
